ecmascript/parser/tests/typescript-errors/tsc/decorators/invalid/decoratorOnEnum2/input.ts.stderr
error: Decorators are not valid here
 --> $DIR/tests/typescript-errors/tsc/decorators/invalid/decoratorOnEnum2/input.ts:4:5
  |
4 |     @dec A
  |     ^^^^

